--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <div style="text-align: center; padding: 2rem; background: #f8f9fa;">
             <h2>New Service Portfolio Available</h2>
-            <a href="https://www.alwejhagroup.com/industrial" class="navy-btn" target="_blank">
+            <a href="https://www.alwejhagroup.com/" class="navy-btn" target="_blank">
                 Visit Our Industrial Portal →
             </a>
         </div>
