--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Industrial Equipment Installation Services in Oman | AL WEJHA GROUP</title>
-    <meta name="description" content="Certified industrial equipment installation in Oman - Specializing in factory machinery setup, production line installation, and industrial automation. 24/7 support & Omani compliance assurance.">
-    <meta name="keywords" content="industrial equipment installation Oman, factory machinery setup, production line installation, industrial automation Oman, OSHA compliance, AL WEJHA GROUP">
+    <title>Industrial equipments Installation Services in Oman | AL WEJHA GROUP</title>
+    <meta name="description" content="Certified industrial equipmentss installation in Oman - Specializing in factory machinery setup, production line installation, and industrial automation. 24/7 support & Omani compliance assurance.">
+    <meta name="keywords" content="industrial equipmentss installation Oman, factory machinery setup, production line installation, industrial automation Oman, OSHA compliance, AL WEJHA GROUP">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <style>
         :root {
@@ -80,7 +80,7 @@
 </head>
 <body>
     <header class="industrial-header">
-        <h1>Industrial Equipment Installation in Oman</h1>
+        <h1>Industrial equipments Installation in Oman</h1>
         <p>Precision Setup for Manufacturing Excellence</p>
     </header>
 
@@ -108,7 +108,7 @@
                 <h3>Safety Certification</h3>
                 <ul style="text-align: left; list-style: none; padding: 0;">
                     <li>✓ OSHA-standard installations</li>
-                    <li>✓ Equipment certification</li>
+                    <li>✓ equipment certification</li>
                     <li>✓ Operator training</li>
                 </ul>
             </article>
